# singularity-operator

./: .env.example  .gitignore  LICENSE  README.md  groq_singularity.py  multi_ai_orchestrator.py  pyproject.toml  requirements.txt  singularity_operator.py  userscript_auto_update.js
.github/workflows/: auto-evolve.yml
singularity_operator/: __init__.py  advanced_userscript.py  browser_automation.py  cli.py  everything_db.py  github_seamless.py  groq_client.py  groq_wrapper.py  orchestrator.py  self_improver.py  userscript_gen.py
