[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "singularity-operator"
version = "0.3.0"
description = "v0.3.0 Setpoint: All steps implemented - Enhanced Orchestrator with browser automation, multi-provider, metrics, full autonomous. EverythingDB + SelfImprover + Orchestrator perfected for Eric's ultimate system."
authors = [{name = "Eric (Mufnluvn)"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests"]