[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "singularity-operator"
version = "0.3.0"
description = "Ultimate self-improving Singularity Operator v0.3: EverythingDB + SelfImprover + Orchestrator + GroqWrapper + CLI. Full autonomous, userscript gen, browser hooks, swarm, GitHub seamless. Compact, PDCA, max benefit."
authors = [{name = "Eric (Mufnluvn) + Grok xAI"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests", "groq"]

[project.scripts]
singularity = "singularity_operator.cli:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]